--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,13 +3,8 @@
 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 	"features": {
 		"ghcr.io/devcontainers/features/dotnet:2": {
-			"version": "10.0-preview",
+			"version": "10.0",
 			"additionalVersions": "9.0"
-		},
-		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/devcontainers/features/powershell:1": {
-			"version": "latest",
-			"modules": "Az"
 		},
 		"ghcr.io/devcontainers/features/github-cli:1": {},
 		"ghcr.io/devcontainers/features/azure-cli:1": {}
@@ -20,11 +15,20 @@
 			"extensions": [
 				"ms-dotnettools.csdevkit",
 				"GitHub.vscode-github-actions",
-				"GitHub.copilot",
-				"GitHub.copilot-chat",
 				"redhat.vscode-yaml"
-			]
+			],
+			"mcp": {
+				"servers": {
+					"microsoft.docs.mcp": {
+						"type": "http",
+						"url": "https://learn.microsoft.com/api/mcp"
+					},
+					"github": {
+						"type": "http",
+						"url": "https://api.githubcopilot.com/mcp/"
+					}
+				}
+			}
 		}
 	}
-
 }
