Use artifact download path in release

--- a/.github/workflows/create_github_release.yaml
+++ b/.github/workflows/create_github_release.yaml
@@ -13,7 +13,16 @@ jobs:
     name: Generate extractor artifacts
     strategy:
       matrix:
-        dotnet-runtime: [linux-x64, linux-arm64, linux-musl-x64, linux-musl-arm64, win-x64, osx-arm64, osx-x64]
+        dotnet-runtime:
+          [
+            linux-x64,
+            linux-arm64,
+            linux-musl-x64,
+            linux-musl-arm64,
+            win-x64,
+            osx-arm64,
+            osx-x64,
+          ]
     # Dynamically set the runner OS based on the .NET runtime
     runs-on: ${{ fromJSON('{"linux-x64":"ubuntu-latest", "linux-arm64":"ubuntu-latest", "linux-musl-x64":"ubuntu-latest", "linux-musl-arm64":"ubuntu-latest", "win-x64":"windows-latest", "osx-arm64":"macos-latest", "osx-x64":"macos-latest"}')[matrix.dotnet-runtime] }}
     steps:
@@ -60,7 +69,16 @@ jobs:
     name: Generate publisher artifacts
     strategy:
       matrix:
-        dotnet-runtime: [linux-x64, linux-arm64, linux-musl-x64, linux-musl-arm64, win-x64, osx-arm64, osx-x64]
+        dotnet-runtime:
+          [
+            linux-x64,
+            linux-arm64,
+            linux-musl-x64,
+            linux-musl-arm64,
+            win-x64,
+            osx-arm64,
+            osx-x64,
+          ]
     # Dynamically set the runner OS based on the .NET runtime
     runs-on: ${{ fromJSON('{"linux-x64":"ubuntu-latest", "linux-arm64":"ubuntu-latest", "linux-musl-x64":"ubuntu-latest", "linux-musl-arm64":"ubuntu-latest", "win-x64":"windows-latest", "osx-arm64":"macos-latest", "osx-x64":"macos-latest"}')[matrix.dotnet-runtime] }}
     steps:
@@ -212,7 +230,7 @@ jobs:
         shell: pwsh
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v5
         with:
           name: ado
           path: ${{ runner.temp }}/Azure_DevOps.zip
@@ -229,16 +247,23 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      : ${{ github.workspace }}/downloaded-artifacts
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@v4
+        id: download-artifacts
+        uses: actions/download-artifact@v5
+        with:
+          merge-multiple: true
 
       - name: Checkout repository
         uses: actions/checkout@v5
 
       - name: Create release
         env:
+          ARTIFACT_DOWNLOAD_PATH: ${{ steps.download-artifacts.outputs.download-path }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_WORKSPACE: ${{github.workspace}}
           RELEASE_TAG: ${{ github.event.inputs.Release_Version }}
           COMMIT_ID: ${{ github.sha }}
         run: |
@@ -260,22 +285,23 @@ jobs:
             --target "$COMMIT_ID"
 
           # Upload assets
+          ls -R "$ARTIFACT_DOWNLOAD_PATH"
           gh release upload "$RELEASE_TAG" \
-            "$GITHUB_WORKSPACE/extractor-linux-arm64/extractor-linux-arm64.zip" \
-            "$GITHUB_WORKSPACE/extractor-linux-musl-arm64/extractor-linux-musl-arm64.zip" \
-            "$GITHUB_WORKSPACE/extractor-linux-musl-x64/extractor-linux-musl-x64.zip" \
-            "$GITHUB_WORKSPACE/extractor-linux-x64/extractor-linux-x64.zip" \
-            "$GITHUB_WORKSPACE/extractor-osx-arm64/extractor-osx-arm64.zip" \
-            "$GITHUB_WORKSPACE/extractor-osx-x64/extractor-osx-x64.zip" \
-            "$GITHUB_WORKSPACE/extractor-win-x64/extractor-win-x64.zip" \
-            "$GITHUB_WORKSPACE/publisher-linux-arm64/publisher-linux-arm64.zip" \
-            "$GITHUB_WORKSPACE/publisher-linux-musl-arm64/publisher-linux-musl-arm64.zip" \
-            "$GITHUB_WORKSPACE/publisher-linux-musl-x64/publisher-linux-musl-x64.zip" \
-            "$GITHUB_WORKSPACE/publisher-linux-x64/publisher-linux-x64.zip" \
-            "$GITHUB_WORKSPACE/publisher-osx-arm64/publisher-osx-arm64.zip" \
-            "$GITHUB_WORKSPACE/publisher-osx-x64/publisher-osx-x64.zip" \
-            "$GITHUB_WORKSPACE/publisher-win-x64/publisher-win-x64.zip" \
-            "$GITHUB_WORKSPACE/github/Github.zip" \
-            "$GITHUB_WORKSPACE/ado/Azure_DevOps.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/extractor-linux-arm64/extractor-linux-arm64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/extractor-linux-musl-arm64/extractor-linux-musl-arm64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/extractor-linux-musl-x64/extractor-linux-musl-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/extractor-linux-x64/extractor-linux-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/extractor-osx-arm64/extractor-osx-arm64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/extractor-osx-x64/extractor-osx-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/extractor-win-x64/extractor-win-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/publisher-linux-arm64/publisher-linux-arm64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/publisher-linux-musl-arm64/publisher-linux-musl-arm64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/publisher-linux-musl-x64/publisher-linux-musl-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/publisher-linux-x64/publisher-linux-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/publisher-osx-arm64/publisher-osx-arm64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/publisher-osx-x64/publisher-osx-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/publisher-win-x64/publisher-win-x64.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/github/Github.zip" \
+            "$ARTIFACT_DOWNLOAD_PATH/ado/Azure_DevOps.zip" \
             --repo "$GITHUB_REPOSITORY" \
             --clobber
